fix: align file input correctly

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -69,6 +69,8 @@ body {
 .import-from-json {
   display: flex;
   flex-direction: column;
+  align-items: center;
+
   margin: 0.5em;
   padding: 0.5rem;
   text-align: center;
